@@ -1,5 +1,6 @@
 20.may (la)
       - accommodate two digit version X.X
+      - fix #9307: Nested tuplets causes crash
 19.may (la)
       - fix crash reported in #10674 comment 2
 17.may (la)
